// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Header component Exercise name exist should match the snapshot 1`] = `
<header
  data-css-1qqtemn=""
>
  <div
    className="left-side"
    data-css-1ulbvcw=""
  >
    <Icon
      color="red"
      data-css-1nxzm7d=""
      icon="menu"
      size={24}
    />
    <div>
      <div
        className="h-date"
        data-css-1ixk24o=""
      >
        Saturday, Jul 15th
      </div>
      <div
        className="h-title"
        data-css-1qe4ilz=""
        data-test="currently"
      >
        Pull Up
      </div>
    </div>
  </div>
  <div
    className="right-side"
  >
    <UserImage />
  </div>
</header>
`;

exports[`Header component Shallow snapshot matches the previous 1`] = `
<header
  data-css-1qqtemn=""
>
  <div
    className="left-side"
    data-css-1ulbvcw=""
  >
    <Icon
      color="red"
      data-css-1nxzm7d=""
      icon="menu"
      size={24}
    />
    <div>
      <div
        className="h-date"
        data-css-1ixk24o=""
      >
        Saturday, Jul 15th
      </div>
      <div
        className="h-title"
        data-css-1qe4ilz=""
        data-test="currently"
      >
        Start Workout
      </div>
    </div>
  </div>
  <div
    className="right-side"
  >
    <UserImage />
  </div>
</header>
`;
